unpackaged/main/default/objects/AgentWork__c/AgentWork__c.object-meta.xml
<CustomObject>
    <description>This object is used for creating fake demo data for analytics - use the Standard Agent Work object for any functionality you want to update/work.</description>
    <label>AgentWork__c</label>
    <nameField>
        <displayFormat>AWD-{0000}</displayFormat>
        <label>AgentWork Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AgentWork__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>