unpackaged/main/default/objects/AgentWork__c/fields/AcceptDateTime__c.field-meta.xml
<CustomField>
    <fullName>AcceptDateTime__c</fullName>
    <label>AcceptDateTime</label>
    <type>DateTime</type>
</CustomField>