unpackaged/main/default/objects/AgentWork__c/fields/ActiveTime__c.field-meta.xml
<CustomField>
    <fullName>ActiveTime__c</fullName>
    <label>ActiveTime</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>