unpackaged/main/default/objects/AgentWork__c/fields/AgentCapacityWhenDeclined__c.field-meta.xml
<CustomField>
    <fullName>AgentCapacityWhenDeclined__c</fullName>
    <label>AgentCapacityWhenDeclined</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>