unpackaged/main/default/objects/AgentWork__c/fields/AssignedDateTime__c.field-meta.xml
<CustomField>
    <fullName>AssignedDateTime__c</fullName>
    <label>AssignedDateTime</label>
    <type>DateTime</type>
</CustomField>