unpackaged/main/default/objects/AgentWork__c/fields/CancelDateTime__c.field-meta.xml
<CustomField>
    <fullName>CancelDateTime__c</fullName>
    <label>CancelDateTime</label>
    <type>DateTime</type>
</CustomField>