unpackaged/main/default/objects/AgentWork__c/fields/CapacityPercentage__c.field-meta.xml
<CustomField>
    <fullName>CapacityPercentage__c</fullName>
    <label>CapacityPercentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>