unpackaged/main/default/objects/AgentWork__c/fields/CapacityWeight__c.field-meta.xml
<CustomField>
    <fullName>CapacityWeight__c</fullName>
    <label>CapacityWeight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>