unpackaged/main/default/objects/AgentWork__c/fields/CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>CloseDateTime__c</fullName>
    <label>CloseDateTime</label>
    <type>DateTime</type>
</CustomField>