unpackaged/main/default/objects/AgentWork__c/fields/DeclineDateTime__c.field-meta.xml
<CustomField>
    <fullName>DeclineDateTime__c</fullName>
    <label>DeclineDateTime</label>
    <type>DateTime</type>
</CustomField>