unpackaged/main/default/objects/AgentWork__c/fields/DeclineReason__c.field-meta.xml
<CustomField>
    <fullName>DeclineReason__c</fullName>
    <label>DeclineReason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>