unpackaged/main/default/objects/AgentWork__c/fields/HandleTime__c.field-meta.xml
<CustomField>
    <fullName>HandleTime__c</fullName>
    <label>HandleTime</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>