unpackaged/main/default/objects/AgentWork__c/fields/OriginalQueueId__c.field-meta.xml
<CustomField>
    <fullName>OriginalQueueId__c</fullName>
    <label>OriginalQueue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>