unpackaged/main/default/objects/AgentWork__c/fields/PushTimeout__c.field-meta.xml
<CustomField>
    <fullName>PushTimeout__c</fullName>
    <label>PushTimeout</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>