unpackaged/main/default/objects/AgentWork__c/fields/PushTimeoutDateTime__c.field-meta.xml
<CustomField>
    <fullName>PushTimeoutDateTime__c</fullName>
    <label>PushTimeoutDateTime</label>
    <type>DateTime</type>
</CustomField>