unpackaged/main/default/objects/AgentWork__c/fields/RequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>RequestDateTime__c</fullName>
    <label>RequestDateTime</label>
    <type>DateTime</type>
</CustomField>