unpackaged/main/default/objects/AgentWork__c/fields/ServiceChannelId__c.field-meta.xml
<CustomField>
    <fullName>ServiceChannelId__c</fullName>
    <label>ServiceChannel ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>