unpackaged/main/default/objects/AgentWork__c/fields/SpeedToAnswer__c.field-meta.xml
<CustomField>
    <fullName>SpeedToAnswer__c</fullName>
    <label>SpeedToAnswer</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>