unpackaged/main/default/objects/AgentWork__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AgentWorkRelated</relationshipName>
    <type>Lookup</type>
</CustomField>