unpackaged/main/default/objects/AgentWork__c/fields/WorkItemId__c.field-meta.xml
<CustomField>
    <fullName>WorkItemId__c</fullName>
    <label>WorkItem ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>